--- a/pom.xml
+++ b/pom.xml
@@ -290,6 +290,14 @@
 			<version>${org.springframework.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		
+		<!-- use faster xml -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-base</artifactId>
+			<version>2.4.4</version>
+		</dependency>
 
 	</dependencies>
 
